# Agentic-research-engine

./: .env  README.md  agent.py  pyproject.toml  requirements.txt
Agents/: multiaiagent.ipynb
Basicchatbot/: basicchatbot.ipynb
Debugging/: debugging.ipynb  langgraph.json  main.py
Humanassistance/: humaninloop.ipynb
Multimodal/: webrag.ipynb
